--- a/stack.yml
+++ b/stack.yml
@@ -37,7 +37,7 @@ services:
       - management
       - db-supervision
     depends_on:
-      - db
+      - mariadb
     deploy:
       mode: replicated
       replicas: 1
